made changes to html files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,10 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1>Hello w</h1>
 
 </br>
 <p> My name is {{ first_name}}</p>
+
+{% endblock %}
