fixed navbar, updated hello.py

--- a/templates/name.html
+++ b/templates/name.html
@@ -23,7 +23,7 @@
     <br/><br/>
 
     <p id = "demo"> This stuff....</p>
-<script src="{{ url_for('static', filename='js/myfile.js')}}" >
+<!--<script src="{{ url_for('static', filename='js/myfile.js')}}" >-->
 
 
 {% else %}
