--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,13 +13,10 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-limk active" aria-current="page"  href="{{ url_for('name') }}">Name </a>
+          <a class="nav-limk px-3 " aria-current="page"  href="#">Name </a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-limk active" aria-current="page" href="#">Add User</a>
-        </li>
-
+        
       </ul>
 
       <form class="d-flex" role="search">
@@ -29,3 +26,26 @@
     </div>
   </div>
 </nav>
+
+
+
+<!--
+
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          
+          <a class="nav-link active" aria-current="page" href="{{ url_for('user',name='Lungelo')}}">User Profile</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-limk active" aria-current="page"  href="{{ url_for('name') }}">Name </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-limk active" aria-current="page" href="#">Add User</a>
+        </li>
+
+      </ul>
+
+
+-->
