--- a/templates/name.html
+++ b/templates/name.html
@@ -19,7 +19,7 @@
     <h1> Hello {{ name }} !! </h1>
     <br/>
     
-    <img src = "{{ url_for('static',filename='images/lungelo.png') }}" width=1100>
+    <img src = "{{ url_for('static',filename='images/qr.png') }}" width=1100>
     <br/><br/>
 
     <p id = "demo"> This stuff....</p>
