--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"> Flasker </a>
+    <a class="navbar-brand" href="{{ url_for('index') }}"> Flasker </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,11 +9,12 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           
-          <a class="nav-link active" aria-current="page" href="{{ url_for('user',name='Lungelo')}}">User Profile</a>
+          <a class="nav-link" aria-current="page" href="{{ url_for('user',name='Lungelo')}}">User Profile</a>
+
         </li>
 
         <li class="nav-item">
-          <a class="nav-limk px-3 " aria-current="page"  href="#">Name </a>
+          <a class="nav-limk px-3 " aria-current="page"  href="{{ url_for('name') }}">Name </a>
         </li>
 
         
